--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@ng-select/ng-select": "^10.0.3",
+    "@types/quill": "^1.3.10",
+    "ngx-quill": "^20.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
